Improve PlanAccionService